rust-core/include/automerge_core.h

#pragma once
#ifndef AUTOMERGE_CORE_H
#define AUTOMERGE_CORE_H

#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

// ─── Opaque types ──────────────────────────────────────────────────────────────

/// Opaque handle for an Automerge document.
typedef struct AMdoc AMdoc;

/// Opaque handle for an Automerge sync state (one instance per peer).
typedef struct AMsync_state AMsync_state;

// ─── Return codes ─────────────────────────────────────────────────────────────
#define AM_OK  0
#define AM_ERR 1

// ─── Document lifecycle ───────────────────────────────────────────────────────

/// Create a new empty Automerge document.
/// Ownership is transferred to the caller; free with AMdestroy_doc.
AMdoc* AMcreate_doc(void);

/// Destroy a document and free its memory.
void AMdestroy_doc(AMdoc* doc);

// ─── Persistence ─────────────────────────────────────────────────────────────

/// Serialize the document to bytes.
/// @param doc     The document to save.
/// @param out_bytes  Receives heap-allocated byte buffer (free with AMfree_bytes).
/// @param out_len    Receives byte count.
/// @return AM_OK on success, AM_ERR on failure.
int AMsave(AMdoc* doc, uint8_t** out_bytes, size_t* out_len);

/// Load a document from bytes produced by AMsave.
/// @param data     Pointer to byte buffer.
/// @param len      Byte count.
/// @param out_doc  Receives heap-allocated document handle (free with AMdestroy_doc).
/// @return AM_OK on success, AM_ERR on failure.
int AMload(const uint8_t* data, size_t len, AMdoc** out_doc);

// ─── Heads ────────────────────────────────────────────────────────────────────

/// Get the current heads (frontier) as packed 32-byte SHA-256 hashes.
/// @param doc       The document.
/// @param out_heads Receives packed hash bytes (n_heads * 32); free with AMfree_bytes.
/// @param out_len   Receives total byte count.
/// @return AM_OK on success.
int AMget_heads(AMdoc* doc, uint8_t** out_heads, size_t* out_len);

// ─── Changes ─────────────────────────────────────────────────────────────────

/// Get all changes produced since the given heads.
/// @param doc         The document.
/// @param heads       Packed 32-byte hashes of known heads (may be NULL / 0 for all).
/// @param heads_len   Total byte count of heads (multiple of 32).
/// @param out_changes Receives concatenated change bytes; free with AMfree_bytes.
/// @param out_len     Receives byte count.
/// @return AM_OK on success.
int AMget_changes(AMdoc* doc,
                  const uint8_t* heads, size_t heads_len,
                  uint8_t** out_changes, size_t* out_len);

/// Apply a binary changes buffer to the document.
/// @param doc     The document.
/// @param changes Concatenated raw change bytes (from AMget_changes).
/// @param len     Byte count.
/// @return AM_OK on success.
int AMapply_changes(AMdoc* doc, const uint8_t* changes, size_t len);

// ─── Merge ───────────────────────────────────────────────────────────────────

/// Merge all changes from src into dest.  Both must be valid.
int AMmerge(AMdoc* dest, AMdoc* src);

// ─── Read ─────────────────────────────────────────────────────────────────────

/// Read a document value by JSON path.
/// @param doc       The document (const).
/// @param path_json UTF-8 JSON array string, e.g. "[\"name\"]".
///                  NULL or "[]" → serialise entire root.
/// @param out_json  Receives NUL-terminated JSON bytes; free with AMfree_bytes(ptr, len+1).
/// @param out_len   Receives byte count excluding NUL.
/// @return AM_OK on success.
int AMget_value(const AMdoc* doc,
                const char* path_json,
                uint8_t** out_json, size_t* out_len);

// ─── Write ────────────────────────────────────────────────────────────────────

/// Set scalar key-value pairs in the document root.
/// @param doc      The document.
/// @param json_obj UTF-8 JSON object, e.g. "{\"name\":\"Alice\"}".
///                 Only scalar values are accepted.
/// @return AM_OK on success.
int AMput_json_root(AMdoc* doc, const char* json_obj);

// ─── Sync ─────────────────────────────────────────────────────────────────────

/// Create a new sync state.  Ownership is transferred to caller.
AMsync_state* AMcreate_sync_state(void);

/// Free a sync state.
void AMfree_sync_state(AMsync_state* state);

/// Generate the next sync message to send to a remote peer.
/// @param doc     The local document.
/// @param state   The per-peer sync state.
/// @param out_msg Receives heap-allocated message bytes, or NULL if nothing to send.
/// @param out_len Receives message byte count (0 if nothing to send).
/// @return AM_OK on success.
int AMgenerate_sync_message(AMdoc* doc, AMsync_state* state,
                            uint8_t** out_msg, size_t* out_len);

/// Process an incoming sync message from a remote peer.
/// @param doc   The local document.
/// @param state The per-peer sync state.
/// @param msg   Incoming message bytes.
/// @param len   Byte count.
/// @return AM_OK on success.
int AMreceive_sync_message(AMdoc* doc, AMsync_state* state,
                           const uint8_t* msg, size_t len);

/// Persist a sync state to bytes.
/// @param state     The sync state.
/// @param out_bytes Receives heap-allocated bytes; free with AMfree_bytes.
/// @param out_len   Receives byte count.
/// @return AM_OK on success.
int AMsave_sync_state(const AMsync_state* state,
                      uint8_t** out_bytes, size_t* out_len);

/// Restore a sync state from persisted bytes.
/// @param data      Byte buffer.
/// @param len       Byte count.
/// @param out_state Receives heap-allocated sync state; free with AMfree_sync_state.
/// @return AM_OK on success.
int AMload_sync_state(const uint8_t* data, size_t len,
                      AMsync_state** out_state);

// ─── Error handling ──────────────────────────────────────────────────────────

/// Copy the last error message into buf (NUL-terminated).
/// @param buf     Output buffer.  May be NULL to query required size.
/// @param buf_len Buffer capacity in bytes.
/// @return Number of bytes written including NUL, or required size if buf==NULL.
size_t AMget_last_error(char* buf, size_t buf_len);

// ─── Memory management ───────────────────────────────────────────────────────

/// Free a byte buffer returned by this library.
/// @param data Pointer originally written to an out_* parameter.
/// @param len  Byte count originally written to the matching out_len parameter.
void AMfree_bytes(uint8_t* data, size_t len);

#ifdef __cplusplus
} // extern "C"
#endif

#endif // AUTOMERGE_CORE_H